# StellaSoraBot

./: .gitignore  README.md  char_skills.py  characters.py  data_utils.py  main.py  pyproject.toml  user-config.py  wiki_utils.py
character_info/: affinity_archive.py  audio.py  char_advance.py  char_affinity.py  char_gifts.py  char_images.py  char_infobox.py  char_potential.py  char_profile.py  char_skills.py  char_sprite_face.py  char_sprites.py  char_stats.py  char_story.py  char_talents.py  characters.py  private_message.py
page_generators/: archive_notes.py  cg_uploader.py  discs.py  event_activities.py  events.py  items.py  live2d_talent_images.py  purge_pages.py  slop.py
story/: export_event_story.py  export_story.py  parse_story.py  story_audio.py
tools/: live2d_browser.py  live2d_screenshots.py
unpack/: unpack_audio.py  unpack_dll.py  unpack_event_images.py  unpack_image.py  unpack_live2d.py  unpack_lua.py  unpack_main.py  unpack_paths.py  unpack_utils.py
utils/: audio_utils.py  data_utils.py  skill_utils.py  stat_utils.py  text_utils.py  upload_utils.py  wiki_utils.py
