[project]
name = "stellasorabot"
version = "0.1.0"
description = "Add your description here"
requires-python = "~=3.13.0"
dependencies = [
    "opencv-python>=4.12.0.88",
    "pywikibot>=10.5.0",
    "requests>=2.32.5",
    "slpp>=1.2.3",
    "unitypy[ttgen]==1.23.0",
    "wikitextparser>=0.56.4",
    "xxhash>=3.6.0",
]
