[project]
name = "stellasorabot"
version = "0.1.0"
description = "Add your description here"
requires-python = "~=3.13.0"
dependencies = [
    "fastdtw>=0.3.4",
    "librosa>=0.11.0",
    "opencv-python>=4.12.0.88",
    "playwright>=1.60.0",
    "pywikibot>=10.5.0",
    "requests>=2.32.5",
    "slpp>=1.2.3",
    "unitypy[ttgen]==1.23.0",
    "wikitextparser>=0.56.4",
    "xxhash>=3.6.0",
]

[project.optional-dependencies]
grounding = [
    "torch",
    "torchvision",
    "transformers>=4.0.0,<5",
    "addict",
    "yapf",
    "timm",
    "numpy",
    "supervision>=0.22.0",
    "pycocotools",
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = [{ index = "pytorch-cu128" }]
torchvision = [{ index = "pytorch-cu128" }]
